tests/invalid/wrong-pmf-version.pmf
{
  "_invalid_reason": "pmf_version '1.0' does not match required value '0.1'",
  "pmf_version": "1.0",
  "engine": "test-engine",
  "summary": "A track with the wrong PMF version.",
  "identity": {
    "seed": 1,
    "bpm": 120.0,
    "key": "C major",
    "bars": 4
  },
  "render_key": {
    "sample_rate": 44100,
    "bars": 4,
    "stem_format": "stereo",
    "loop_mode": "looped",
    "engine_version_major": 1
  }
}
